[package]
name = "railroad_dsl"
version = "0.2.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
license = "MIT"
description = "A small DSL to generate syntax-diagrams"
exclude = ["examples/*.html", "examples/*.jpeg"]
repository = "https://github.com/lukaslueg/railroad_dsl"
readme = "README.md"
edition = "2021"

[dependencies]
pest = "2.6"
pest_derive = "2.6"
clap = { version = "4.3", features = ["derive"]}
railroad = "0.2"

[dev-dependencies]
htmlescape = "0.3"
